- Minor fixes to the nav-bar size and content alignment

--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ body {
     position: sticky;
     top: 0px;
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
     align-items: center;
     height: 6rem;
     background-color: rgba(40, 40, 40, 0.95);
@@ -88,6 +88,8 @@ body {
     box-shadow: rgba(0, 0, 0, 0.3) 0px 4px 4px;
     z-index: 2147483647;
     border-bottom: 1px solid rgb(26, 26, 26);
+    padding-right: 2rem;
+    height: 3rem;
 }
 
 .navigation {
